fix(header): fixed header menu on mobile overlapping content

--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -33,6 +33,7 @@
                 visibility: visible;
                 padding-top: 10rem;
                 overflow-y: auto;
+                pointer-events: initial;
             }
 
             &__wrapper {
@@ -280,6 +281,7 @@
             opacity: 0;
             visibility: hidden;
             transition: .3s ease-in-out;
+            pointer-events: none;
         }
     }
 
